fix: 🐛 Remove padding in footer in normal web view
Originally, there was a 2pt padding in footer. This would casue the
color changing when hovering on the footer can't cover the completed
height of footer.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -277,7 +277,6 @@ footer {
     color: grey;
     border-top: 1pt solid rgb(59, 59, 59);
     padding: 0 3pt;
-    padding-top: 2pt;
     display: flex;
     justify-content: space-between;
 }
